# AthleteOS

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
api/: Dockerfile  __init__.py  config.py  db.py  jwt_utils.py  kafka_admin.py  main.py  models.py  observability.py  security.py
api/routers/: analytics.py  athletes.py  login.py  metrics.py  pipeline.py
bootstrap/: Dockerfile  __init__.py  _topology.py  create_topics.py  register_schemas.py  run.py
data/inbox/cardio/: sample.csv
data/inbox/nutrition/: sample.csv
data/inbox/planning/: sample.csv
data/inbox/recovery/: sample.csv
data/inbox/strength/: sample.csv
data/inbox/wellness/: sample.csv
docker/flink/: Dockerfile  docker-entrypoint-wrapper.sh  submit.sh
docs/: ARCHITECTURE.md
ingestion/: Dockerfile  __init__.py  __main__.py
ingestion/cardio/: __init__.py  parser.py  producer.py  watcher.py
ingestion/nutrition/: parser.py  producer.py  watcher.py
ingestion/planning/: __init__.py  parser.py  producer.py  watcher.py
ingestion/recovery/: parser.py  producer.py  watcher.py
ingestion/strength/: __init__.py  parser.py  producer.py  watcher.py
ingestion/wellness/: __init__.py  parser.py  producer.py  watcher.py
jobs/: __init__.py
jobs/adherence_metrics/: __init__.py  compute.py  main.py
jobs/canonicalize/: __init__.py  main.py  transform.py
jobs/cardio_canonicalize/: main.py  transform.py
jobs/metrics/: __init__.py  compute.py  main.py
jobs/nutrition_canonicalize/: __init__.py  main.py  transform.py
jobs/planning_canonicalize/: __init__.py  main.py  transform.py
jobs/recovery_canonicalize/: __init__.py  main.py  transform.py
jobs/wellness_canonicalize/: __init__.py  main.py  transform.py
jobs/wellness_metrics/: __init__.py  compute.py  main.py
observability/: prometheus.yml
observability/grafana/dashboards/: athleteos_pipeline.json
observability/grafana/provisioning/dashboards/: provider.yml
openspec/: config.yaml
openspec/changes/athleteos-foundation/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/athleteos-foundation/specs/analytical-store/: spec.md
openspec/changes/athleteos-foundation/specs/architecture/: spec.md
openspec/changes/athleteos-foundation/specs/event-contracts/: spec.md
openspec/changes/athleteos-foundation/specs/serving-store/: spec.md
schemas/: __init__.py
schemas/canonical/: PlanningBlock.avsc  TrainingEvent.avsc  WellnessEvent.avsc
storage/: __init__.py
storage/duckdb/: __init__.py  parity.py  reader.py
storage/iceberg/: __init__.py  compaction.py  sink.py  tables.py
storage/postgres/: __init__.py  athletes_ddl.sql  ddl.sql  planning_ddl.sql  sink.py  users_ddl.sql
tests/: __init__.py  _pyarrow_compat.py  conftest.py
tests/integration/: __init__.py  test_adherence_metrics_job.py  test_api_athletes.py  test_api_dlq.py  test_api_health.py  test_api_login.py  test_api_metrics.py  test_api_metrics_recovery.py  test_canonicalize_job.py  test_cardio_canonicalize_job.py  test_cardio_ingestion.py  test_compose_substitution.py  test_ddl_idempotency.py  test_ddl_users.py  test_dlq_quality_integration.py  test_dlq_replay_integration.py  test_metrics_job.py  test_nutrition_canonicalize_job.py  test_planning_canonicalize_job.py  test_recovery_canonicalize_job.py  test_recovery_ingestion.py  test_schema_registry.py  test_sinks.py  test_strength_ingestion.py  test_topics.py  test_wellness_canonicalize_job.py  test_wellness_ingestion.py  test_wellness_metrics_job.py
tests/unit/: __init__.py  test_adherence_compute.py  test_adherence_upsert.py  test_api_metrics_dates.py  test_api_metrics_recovery.py  test_api_observability.py  test_api_pipeline.py  test_athletes_router.py  test_auth_router.py  test_canonicalize_config.py  test_canonicalize_transform.py  test_cardio_canonicalize_config.py  test_cardio_parser.py  test_cardio_producer.py  test_cardio_transform.py  test_cardio_watcher.py  test_compose_flink_submit.py  test_config.py  test_cors_config.py  test_dlq_quality_config.py  test_dlq_quality_main.py  test_dlq_quality_reports.py  test_dlq_quality_scan.py  test_dlq_replay_config.py  test_dlq_replay_consumer.py  test_dlq_replay_envelope.py  test_dlq_replay_main.py  test_dlq_replay_producer.py  test_dlq_replay_replay.py  test_dlq_replay_report.py  test_duckdb_parity.py  test_harness.py  test_iceberg_sink.py  test_ingestion_supervisor.py  test_jwt_config.py  test_jwt_dep.py  test_jwt_utils.py  test_kafka_admin.py  test_metrics_compute.py  test_metrics_env_config.py  (+37 more)
tools/: __init__.py  seed_demo.py  seed_user.py
tools/dlq_quality/: __init__.py  __main__.py  config.py  quality.py  reports.py
tools/dlq_replay/: __init__.py  __main__.py  config.py  consumer.py  envelope.py  producer.py  replay.py  report.py
ui/: __init__.py
web/: .dockerignore  .env  .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/api/__tests__/: client.test.ts
web/src/components/: AthletePicker.tsx  AthleteSelector.tsx  CoachingFlagsPanel.tsx  DashboardPage.tsx  PipelineHealthPanel.tsx  TrendChart.tsx
web/src/components/__tests__/: AthleteSelector.test.tsx  CoachingFlagsPanel.test.tsx  DashboardPage.test.tsx
web/src/components/analytics/: RiskDistributionChart.tsx  SportAnalyticsSection.tsx  SportBarChart.tsx  SportRankingTable.tsx
web/src/components/states/: Empty.tsx  ErrorAlert.tsx  Loading.tsx
web/src/components/states/__tests__/: states.test.tsx
web/src/hooks/: useAnalytics.ts  useAthleteDirectory.ts  useAthletes.ts  useDlqDepth.ts  useMetrics.ts
web/src/styles/: theme.css
web/src/test/: setup.ts
web/src/utils/: densifySeries.test.ts  densifySeries.ts
