[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athleteos"
version = "0.1.0"
description = "AthleteOS - real-time athlete data platform (event-staged architecture)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "AthleteOS" }]

# Runtime dependencies for the platform. Heavy/streaming deps (apache-flink) are
# declared here for reproducibility; the test harness (see [dev]) is the slice
# that PR1 actually exercises. PR2+ jobs will import the runtime deps.
dependencies = [
  "apache-flink>=1.19",
  "confluent-kafka>=2.5",
  "fastavro>=1.9",
  "psycopg2-binary>=2.9",
  "duckdb>=0.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "streamlit>=1.33",
]

[project.optional-dependencies]
# Test harness dependencies. Install with: pip install -e ".[dev]"
dev = [
  "pytest>=8.0",
  "testcontainers[kafka]>=4.7",
  "requests>=2.31",
]

[tool.pytest.ini_options]
# Mirrored in pytest.ini for environments that do not read pyproject.
testpaths = ["tests"]