[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athleteos"
version = "0.1.0"
description = "AthleteOS - real-time athlete data platform (event-staged architecture)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "AthleteOS" }]

# Runtime dependencies for the platform. Heavy/streaming deps (apache-flink) are
# declared here for reproducibility; the test harness (see [dev]) is the slice
# that PR1 actually exercises. PR2+ jobs will import the runtime deps.
# requires-python is pinned to >=3.11,<3.12: apache-flink 1.19 ships wheels for
# CPython 3.8-3.11 ONLY (no 3.12+ wheels), so 3.11.x is the single supported
# runtime for the streaming jobs. The harness + unit tests still collect/import
# cleanly on other interpreters (jobs isolate pyflink behind lazy imports), but
# the integration test that executes the PyFlink job requires 3.11.
dependencies = [
  "apache-flink>=1.19",
  "confluent-kafka>=2.5",
  "fastavro>=1.9",
  "psycopg2-binary>=2.9",
  "duckdb>=0.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "streamlit>=1.33",
  "sentry-sdk>=2.0,<3",
]

[project.optional-dependencies]
# Test harness dependencies. Install with: pip install -e ".[dev]"
dev = [
  "pytest>=8.0",
  "testcontainers[kafka]>=4.7",
  "requests>=2.31",
]

# Explicit package discovery. Without this, setuptools flat-layout autodiscovery
# fails on a clean environment ("Multiple top-level packages discovered") because
# the repo root holds several top-level code packages plus non-code dirs (openspec,
# tests, data). List only the real importable code packages and their subpackages.
[tool.setuptools.packages.find]
include = [
  "jobs*",
  "ingestion*",
  "bootstrap*",
  "storage*",
  "schemas*",
  "api*",
  "ui*",
]
exclude = ["tests*", "openspec*", "data*"]

[tool.pytest.ini_options]
# Mirrored in pytest.ini for environments that do not read pyproject.
testpaths = ["tests"]