[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "athleteos"
version = "0.1.0"
description = "AthleteOS - real-time athlete data platform (event-staged architecture)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "AthleteOS" }]

# Runtime dependencies for the platform. Heavy/streaming deps (apache-flink) are
# declared here for reproducibility; the test harness (see [dev]) is the slice
# that PR1 actually exercises. PR2+ jobs will import the runtime deps.
# requires-python is pinned to >=3.11,<3.12: apache-flink 1.19 ships wheels for
# CPython 3.8-3.11 ONLY (no 3.12+ wheels), so 3.11.x is the single supported
# runtime for the streaming jobs. The harness + unit tests still collect/import
# cleanly on other interpreters (jobs isolate pyflink behind lazy imports), but
# the integration test that executes the PyFlink job requires 3.11.
dependencies = [
  # Data-pipeline deps are upper-bounded to the major/minor line the code targets.
  # apache-flink is pinned to the 1.19 line: the PyFlink job code uses 1.19 APIs
  # (set_restart_strategy, the bundled KafkaSink connector) that were removed/moved
  # in 2.x. A clean install without this cap pulls 2.x and breaks every PyFlink job.
  "apache-flink>=1.19,<1.20",
  "confluent-kafka>=2.5,<3",
  "fastavro>=1.9,<2",
  "psycopg2-binary>=2.9,<3",
  "duckdb>=0.10,<1",
  # Iceberg analytical sink (work-unit 6.2, PR5).
  # Upper-bounded to <0.8 because:
  #   - 0.7.x is the first version with partitioned-table write support.
  #   - 0.8+ requires pyarrow>=14, which conflicts with
  #     apache-beam 2.48.0 (transitive dep of apache-flink 1.19) that
  #     pins pyarrow<12.0.0.  This constraint is the pinning ceiling.
  # The [pyarrow,sql-sqlite] extras add pyarrow (already installed) and
  # SQLAlchemy for the local SqlCatalog backed by sqlite (no Hadoop JARs).
  "pyiceberg[pyarrow,sql-sqlite]>=0.7.1,<0.8",
  # UI/API deps keep a floor only; minor bumps here are low-risk for this slice.
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "streamlit>=1.33",
  "sentry-sdk>=2.0,<3",
]

[project.optional-dependencies]
# Test harness dependencies. Install with: pip install -e ".[dev]"
dev = [
  "pytest>=8.0",
  "testcontainers[kafka]>=4.7",
  "requests>=2.31",
]

# Explicit package discovery. Without this, setuptools flat-layout autodiscovery
# fails on a clean environment ("Multiple top-level packages discovered") because
# the repo root holds several top-level code packages plus non-code dirs (openspec,
# tests, data). List only the real importable code packages and their subpackages.
[tool.setuptools.packages.find]
include = [
  "jobs*",
  "ingestion*",
  "bootstrap*",
  "storage*",
  "schemas*",
  "api*",
  "ui*",
]
exclude = ["tests*", "openspec*", "data*"]

# Pytest configuration lives in pytest.ini (single source of truth: markers,
# python_files, addopts). Do not duplicate [tool.pytest.ini_options] here or
# pytest emits "ignoring pytest config in pyproject.toml".